# Modelica-Arduino

./: .gitignore  .gitlab-ci.yml  Arduino.mo  CHANGELOG.md  LICENSE.txt  README.md  build.bat  build_sketch.bat  dist.bat  dist.py  md2html.py  test.bat  test.py
Arduino/: .gitignore  Arduino.mo  package.mo  package.order
Arduino/Components/: ArduinoUno.mo  BodyShape.mo  DFLG6DOF.mo  DFlipFlop.mo  IC74HC595N4.mo  LED.mo  LED2.mo  LED3.mo  LEDMatrix8x8.mo  PiezoSpeaker.mo  Potentiometer.mo  ResettableDFlipFlop.mo  SEN136B5B.mo  Servo.mo  UltrasonicRangeFinder.mo  UltrasonicRangeFinder2.mo  UltrasonicRangeFinder3.mo  package.mo  package.order
Arduino/Examples/: AnalogReadSerial.mo  AnalogWrite.mo  BarGraph.mo  Blink.mo  BlinkWithoutDelay.mo  Button.mo  ControlledDCMotor.mo  Example.mo  Fade.mo  KeyboardSerial.mo  LEDMatrix.mo  Ping.mo  RobotArm.mo  ShiftOutHelloWorld.mo  Sweep.mo  ToneMelody.mo  package.mo  package.order
Arduino/Firmata/: AnalogInput.mo  DigitalInput.mo  DigitalOutput.mo  PWMOutput.mo  Port.mo  Servo.mo  package.mo  package.order
Arduino/Internal/: Average.mo  BooleanSinglePulse.mo  DelayedPulse.mo  (+22 more)
Arduino/Resources/Source/Arduino/: Arduino.h  Braccio.cpp  CMakeLists.txt  DFLG6DOF.h  Event.h  Keyboard.cpp  Keyboard.h  ModelicaArduino.cpp  ModelicaUtilities.cpp  ModelicaUtilities.h  Print.cpp  Print.h  Servo.cpp  Servo.h  Sketch.cpp  SoftArduino.cpp  SoftArduino.h  WMath.cpp  build_mingw.bat  build_sketch.bat  makefile  pins_arduino.h  stdbool.h
Arduino/Resources/Source/Firmata/: CMakeLists.txt  FirmataConnection.cpp  FirmataConnection.h  ModelicaFirmata.cpp  ModelicaFirmata.h  serial.cpp  serial.h
Libraries/: .gitignore  Braccio.h  Servo.cpp  Servo.h
Sketches/: BarGraph.ino  ControlledDCMotor.ino  Fade.ino  Ping.ino  PulseInExample.ino  Sweep.ino  testBraccio90.ino
VisualStudio/: Arduino.sln
tests/: conftest.py  test_dymola.py  test_examples.py  test_open_modelica.py  utils.py
(+120 files in other folders)
